--- a/src/components/CardItem/CardItem.css
+++ b/src/components/CardItem/CardItem.css
@@ -25,7 +25,7 @@
   background-color: #FFFFFF;
   border: 1px solid #E2E6E9;
   border-radius: 16px;
-  padding: 16px;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -34,25 +34,26 @@
   .cart-item {
     flex-direction: row;
     max-width: 752px;
-    width: 100%;
-    padding: 24px;
+    height: 128px;
+    padding: 1.5rem;
   }
 }
-.cart-item__section {
+.cart-item__container {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  gap: 16px;
+  gap: 1rem;
+  margin: 0;
 }
 @media (min-width: 640px) {
-  .cart-item__section {
-    gap: 24px;
+  .cart-item__container {
+    gap: 1.5rem;
   }
 }
 .cart-item__phone-image {
-  min-width: 80px;
-  width: 80px;
-  height: 80px;
+  min-width: 5rem;
+  height: 5rem;
   padding: 7px;
   display: flex;
   justify-content: center;
@@ -63,18 +64,17 @@
 }
 .cart-item__title {
   font-family: "Mont";
-  font-weight: 600;
   font-size: 0.875rem;
   color: #0F0F11;
 }
 @media (min-width: 640px) {
   .cart-item__title {
-    margin-right: 24px;
+    margin-right: 1.5rem;
   }
 }
 .cart-item__counter {
-  width: 96px;
-  height: 32px;
+  width: 6rem;
+  height: 2rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -92,13 +92,13 @@
 .cart-item__price {
   font-family: "Mont-bold";
   font-size: 1.375rem;
-  margin-left: 30px;
+  margin-left: 1rem;
 }
 .cart-item__close-button {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 4px;
+  padding: 0.25rem;
   cursor: pointer;
 }
 .cart-item__close-button:hover {
