--- a/src/components/CardItem/CardItem.scss
+++ b/src/components/CardItem/CardItem.scss
@@ -4,10 +4,10 @@
 .cart-item {
   width: 100%;
   height: 160px;
-  background-color: #FFFFFF;
-  border: 1px solid #E2E6E9;
+  background-color: variables.$bg-color;
+  border: 1px solid variables.$elements-color;
   border-radius: 16px;
-  padding: 16px;
+  padding: variables.$small-gap;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -15,25 +15,27 @@
   @media (min-width: 640px) {
     flex-direction: row;
     max-width: 752px;
-    width: 100%;
-    padding: 24px;
+    height: 128px;
+    padding: variables.$middle-small-gap;
   }
 
-  &__section {
+  &__container {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    gap: 16px;
+    gap: variables.$small-gap;
+
+    margin: 0;
 
     @media (min-width: 640px) {
-      gap: 24px;
+      gap: variables.$middle-small-gap;
     }
   }
 
   &__phone-image {
-    min-width: 80px;
-    width: 80px;
-    height: 80px;
+    min-width: variables.$card-image-size;
+    height: variables.$card-image-size;
     padding: 7px;
     display: flex;
     justify-content: center;
@@ -46,18 +48,17 @@
 
   &__title {
     font-family: fonts.$main-font;
-    font-weight: 600;
     font-size: variables.$font-size-text;
-    color: #0F0F11;
+    color: variables.$primary-color;
 
     @media (min-width: 640px) {
-      margin-right: 24px;
+      margin-right: variables.$middle-small-gap;
     }
   }
 
   &__counter {
-    width: 96px;
-    height: 32px;
+    width: variables.$counter-width;
+    height: variables.$counter-height;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -65,7 +66,7 @@
   }
 
   &__button {
-    border: 1px solid #E2E6E9;
+    border: 1px solid variables.$elements-color;
 
     &:hover {
       background-color: #f5f5f5;
@@ -79,14 +80,14 @@
   &__price {
     font-family: fonts.$bold-font;
     font-size: variables.$font-size-h3;
-    margin-left: 30px;
+    margin-left: variables.$small-gap;
   }
 
   &__close-button {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 4px;
+    padding: variables.$tiny-gap;
     cursor: pointer;
 
     &:hover {
