--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -81,7 +81,7 @@
 
   &__buttons {
     display: flex;
-    gap: 8px;
+    gap: variables.$smallest-gap;
     align-items: center;
     justify-content: space-between;
   }
@@ -124,15 +124,10 @@
   height: 40px;
   border: 1px solid #B4BDC3;
   border-radius: 50%;
-  background-color: white;
-  background-image: url('../../../public/icons/Favourites\ \(Heart\ Like\).svg');
-  background-size: 16px;
-  background-repeat: no-repeat;
-  background-position: center;
-  cursor: pointer;
+  background: variables.$bg-color url('../../../public/icons/Favourites (Heart Like).svg') center / 16px no-repeat;
   transition: background-color 0.3s, border-color 0.3s;
 
-  &--selected{
+  &--selected {
     background-image: url('../../../public/icons/Favourites\ Filled\ \(Heart\ Like\).svg');
   }
 }
