--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,14 @@
+// SIZE
+
+$min-tablet-width: 640px;
+$min-desktop-width: 1200px;
+
+
+// SIZE CARD
+
+$card-max-width: 272px;
+$card-max-height: 506px;
+
 // COLORS
 
 $secondary-color: #89939A;
@@ -32,6 +43,7 @@ $line-height-text-small: calc($font-size-text-small * 1.5);
 // MARGINS, GAPS, PADDINGS
 
 $tiny-gap: 0.25rem;
+$smallest-gap: 0.5rem;
 $small-gap: 1rem;
 $middle-small-gap: 1.5rem;
 $gap: 2rem;
