--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,6 +1,6 @@
 $main-font: 'Mont';
-$bold-font: 'Mont-bold';
-$semi-bold-font: 'Mont-semi-bold';
+$bold-font: 'Mont-Bold';
+$semi-bold-font: 'Mont-Semi-Bold';
 
 @font-face {
     font-family: $main-font;
@@ -11,17 +11,17 @@ $semi-bold-font: 'Mont-semi-bold';
 }
 
 @font-face {
-    font-family: $bold-font;
-    src: url('/fonts/Mont-Bold.otf') format('opentype');
-    font-weight: 800;
+    font-family: $semi-bold-font;
+    src: url('/fonts/Mont-SemiBold.otf') format('opentype');
+    font-weight: 700;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: $semi-bold-font;
-    src: url('/fonts/Mont-SemiBold.otf') format('opentype');
-    font-weight: 700;
+    font-family: $bold-font;
+    src: url('/fonts/Mont-Bold.otf') format('opentype');
+    font-weight: 800;
     font-style: normal;
     font-display: swap;
 }
