--- a/src/components/pages/CartPage/CartItem/CartItem.scss
+++ b/src/components/pages/CartPage/CartItem/CartItem.scss
@@ -1,12 +1,12 @@
-@use '../../styles/variables' as variables;
-@use '../../styles/fonts' as fonts;
+@use '../../../../styles/variables.scss' as variables;
+@use '../../../../styles/fonts' as fonts;
 
 .cart-item {
   width: 100%;
   height: 160px;
   background-color: variables.$bg-color;
   border: 1px solid variables.$elements-color;
-  border-radius: 16px;
+  border-radius: variables.$border-radius;
   padding: variables.$small-gap;
   display: flex;
   flex-direction: column;
@@ -16,7 +16,7 @@
     flex-direction: row;
     max-width: 752px;
     height: 128px;
-    padding: variables.$middle-small-gap;
+    padding: variables.$medium-gap;
   }
 
   &__container {
@@ -29,7 +29,7 @@
     margin: 0;
 
     @media (min-width: 640px) {
-      gap: variables.$middle-small-gap;
+      gap: variables.$medium-gap;
     }
   }
 
@@ -52,7 +52,7 @@
     color: variables.$primary-color;
 
     @media (min-width: 640px) {
-      margin-right: variables.$middle-small-gap;
+      margin-right: variables.$medium-gap;
     }
   }
 
@@ -65,13 +65,13 @@
     align-items: center;
   }
 
-  &__button {
-    border: 1px solid variables.$elements-color;
+  // &__button {
+  //   border: 1px solid variables.$elements-color;
 
-    &:hover {
-      background-color: #f5f5f5;
-    }
-  }
+  //   &:hover {
+  //     background-color: #f5f5f5;
+  //   }
+  // }
 
   &__count-text {
     font-size: variables.$font-size-text-small;
