--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -42,6 +42,7 @@ button {
     display: flex;
     flex-direction: column;
     min-height: 100%;
+    position: relative;
 }
 
 .wrapper {
@@ -57,6 +58,7 @@ button {
     margin: 0 auto;
     max-width: 1136px;
     display: flex;
+    flex-direction: column;
 
     @media (max-width: 1199px) {
         max-width: 90%;
@@ -68,28 +70,64 @@ button {
 }
 
 .button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: variables.$font-size-text;
     transition: border-color 300ms ease;
+
+    &__icon {
+      color: variables.$secondary-color;
+      transition: border-color 300ms ease;
+    }
+
+    &--primary {
+        height: variables.$button-height;
+        color: variables.$bg-color;
+        line-height: variables.$line-height-text;
+        border-radius: variables.$border-radius;
+        background-color: variables.$accent-color;
+        padding: 0 variables.$smaller-gap;
+
+        &--selected {
+          background-color: variables.$bg-color;
+          color: variables.$accent-color;
+          border: 1px solid #B4BDC3;
+        }
+
+        &:hover {
+          box-shadow: variables.$shadow-color 0px variables.$tiny-gap variables.$shadow-blur;
+        }
+    }
 
     &--secondary {
         border: 1px variables.$icons-color solid ;
     }
 
     &--round {
-        width: 32px;
-        height: 32px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 100%;
+        width: variables.$button-height-small;
+        height: variables.$button-height-small;
+        border-radius: variables.$button-height-small;
+        border: 1px solid variables.$elements-color;
 
         &:hover {
           border-color: variables.$primary-color;
         }
+
+        &:hover .button__icon   {
+          color: variables.$primary-color;
+        }
+    }
+
+    &--long {
+      height: 100%;
     }
 
     &--disabled {
       border-color: variables.$elements-color;
     }
+
+
 }
 
 .nav {
@@ -107,26 +145,65 @@ button {
     }
 }
 
-.headline-1 {
+.headline--1 {
   font-family: fonts.$bold-font, sans-serif;
   font-size: variables.$font-size-h1;
   line-height: variables.$line-height-h1;
 }
 
-.headline-2 {
+.headline--2 {
   font-family: fonts.$bold-font, sans-serif;
   font-size: variables.$font-size-h2;
   line-height: variables.$line-height-h2;
 }
 
-.headline-3 {
+.headline--3 {
   font-family: fonts.$bold-font, sans-serif;
   font-size: variables.$font-size-h3;
   line-height: variables.$line-height-h3;
 }
 
-.headline-4 {
+.headline--4 {
   font-family: fonts.$semi-bold-font, sans-serif;
   font-size: variables.$font-size-h4;
   line-height: variables.$line-height-h4;
+}
+
+.small-text {
+  font-size: variables.$font-size-text-small;
+}
+
+.swiper {
+  width: 100%;
+
+  &-slide, .banner-slider__slide{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+
+  &-button-disabled {
+      opacity: 0.3;
+  }
+
+
+  &-pagination {
+      margin-top: variables.$small-gap;
+      display: flex;
+      gap: variables.$small-gap;
+      align-items: center;
+      justify-content: center;
+  
+     &-bullet {
+          display: block;
+          width: variables.$bullet-point-size;
+          height: variables.$bullet-point-height;
+          background-color: variables.$elements-color;
+          border-radius: variables.$bullet-point-size;
+  
+          &-active {
+              background-color: variables.$primary-color;
+          }
+     }
+  }
 }
