--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,4 @@
-// SIZE
+// SCREEN SIZE
 
 $min-tablet-width: 640px;
 $min-desktop-width: 1200px;
@@ -21,6 +21,7 @@ $icons-color: #B4BDC3;
 $elements-color: #E2E6E9;
 $hover-color: #FAFBFC;
 $bg-color: #FFFFFF;
+$shadow-color: #216bff2f;
 
 // FONTS
 
@@ -43,17 +44,22 @@ $line-height-text-small: calc($font-size-text-small * 1.5);
 // MARGINS, GAPS, PADDINGS
 
 $tiny-gap: 0.25rem;
-$smallest-gap: 0.5rem;
+$smaller-gap: 0.5rem;
 $small-gap: 1rem;
-$middle-small-gap: 1.5rem;
+$medium-gap: 1.5rem;
 $gap: 2rem;
-$big-gap: 6.25rem;
+$big-gap: 2.5rem;
+$large-gap: 6.25rem;
 
-// SIZES
+// ELEMENTS SIZES
 
 $button-height-small: 2rem;
 $button-height: 2.5rem;
 $card-image-size: 5rem;
+$bullet-point-size: 1rem;
+$bullet-point-height: 0.25rem;
+$border-radius: 0.5rem;
+$shadow-blur: 1rem;
 
 // COUNTER SIZES
 
