--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -47,6 +47,7 @@ $smallest-gap: 0.5rem;
 $small-gap: 1rem;
 $middle-small-gap: 1.5rem;
 $gap: 2rem;
+$middle-big-gap: 4rem;
 $big-gap: 6.25rem;
 
 // SIZES
@@ -59,3 +60,9 @@ $card-image-size: 5rem;
 
 $counter-width: 6rem;
 $counter-height: 2rem;
+
+// BUTTONS SIZES
+
+$buttons-width: 5rem;
+$buttons-height: 2rem;
+
