--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,7 +13,7 @@ body {
 }
 
 body {
-  line-height: 1.5;
+  //line-height: 1.5; for what this?
   font-family: fonts.$main-font, sans-serif;
   line-height: variables.$line-height-text;
 }
@@ -54,16 +54,17 @@ button {
 }
 
 .container {
-    margin: 0 auto;
+    margin: 0 variables.$middle-small-gap;
     max-width: 1136px;
     display: flex;
 
     @media (max-width: 1199px) {
-        max-width: 90%;
+      max-width: 90%;
     }
 
     @media (max-width: 639px) {
-        flex-direction: column;
+      margin: 0 auto;
+      flex-direction: column;
     }
 }
 
@@ -75,8 +76,8 @@ button {
     }
 
     &--round {
-        width: 32px;
-        height: 32px;
+        width: variables.$button-height-small;
+        height: variables.$button-height-small;
         display: flex;
         align-items: center;
         justify-content: center;
