Dropdown list implementation

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -54,6 +54,7 @@ $big-gap: 6.25rem;
 $button-height-small: 2rem;
 $button-height: 2.5rem;
 $card-image-size: 5rem;
+$button-width: 11rem;
 
 // COUNTER SIZES
 
