small style fix

--- a/src/components/DropdownList/DropdownList.scss
+++ b/src/components/DropdownList/DropdownList.scss
@@ -50,6 +50,7 @@
     line-height: variables.$line-height-text;
     color: variables.$secondary-color;
     cursor: pointer;
+    border-radius: 8px;
 
     &:hover {
       background-color: variables.$hover-color;
