--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,9 +1,10 @@
 @use '../../styles/variables.scss' as variables;
+@use '../../styles/mixins/mixins.scss' as mixins;
 
 .header {
     position: sticky;
     top: 0;
-    height: 64px;
+    height: variables.$header-size;
     z-index: 9999;
     width: 100%;
     background-color: variables.$bg-color;
@@ -11,37 +12,34 @@
 
     &__container {
         height: 100%;
-        max-width: 100%;
         flex-direction: row;
         align-items: center;
-        gap: 64px;
+        gap: variables.$middle-big-gap;
         justify-content: space-between;
         padding-left: variables.$medium-gap;
     }
 
     .nav {
+        display: none;
         height: 100%;
         flex: 1;
 
-        &__list {
-            display: flex;
-            height: 100%;
-            gap: 64px;
+        @include mixins.on-tablet {
+            display: block;
+        }
 
-            @media (max-width: 1199px) {
-                gap: 16px;
+        &__list {
+            height: 100%;
+            gap: variables.$small-gap;
+
+            @include mixins.on-desktop {
+                gap: variables.$middle-big-gap;
             }
         }
 
         &__item {
-            display: flex;
-            align-items: center;
             position: relative;
             height: 100%;
-        }
-
-        @media (max-width: 639px) {
-            display: none;
         }
     }
 
@@ -54,13 +52,19 @@
     &__button {
         position: relative;
         height: 100%;
-        width: 64px;
+        width: variables.$header-size;
         border-left: 1px solid variables.$elements-color;
 
-        &--desktop {
+        &:hover {
+            background-color: variables.$primary-color;
+            color: variables.$bg-color;
+        }
 
-            @media (max-width: 639px) {
-                display: none;
+        &--desktop {
+            display: none;
+
+            @include mixins.on-tablet {
+                display: flex;
             }
         }
     }
@@ -73,7 +77,7 @@
             display: block;
             position: absolute;
             width: 100%;
-            height: 3px;
+            height: variables.$border-height;
             bottom: 0;
             background-color: variables.$primary-color;
             border-radius: variables.$border-radius;
@@ -81,17 +85,17 @@
     }
 
     .burger {
-        display: none;
+        display: flex;
 
-        @media (max-width: 639px) {
-            display: flex;
+        @include mixins.on-tablet {
+            display: none;
         }
 
         .icon {
             position: relative;
             width: 14px;
-            height: 2px;
-            border-radius: 20px;
+            height: variables.$border-height;
+            border-radius: variables.$border-radius;
             background-color: variables.$primary-color;
 
             &::before {
@@ -100,8 +104,8 @@
                 position: absolute;
                 top: -5px;
                 width: 100%;
-                height: 2px;
-                border-radius: 20px;
+                height: variables.$border-height;
+                border-radius: variables.$border-radius;
                 background-color: variables.$primary-color;
                 transition: all 400ms ease;
             }
@@ -112,8 +116,8 @@
                 position: absolute;
                 bottom: -5px;
                 width: 100%;
-                height: 2px;
-                border-radius: 20px;
+                height: variables.$border-height;
+                border-radius: variables.$border-radius;
                 background-color: variables.$primary-color;
                 transition: all 400ms ease;
             }
