--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -4,45 +4,50 @@
 .product-card {
   display: flex;
   flex-direction: column;
-
-  width: 272px;
-  padding: 32px;
-
-  // box-sizing: border-box;
+  width: variables.$card-width;
+  padding: variables.$gap;
   border: 1px solid variables.$elements-color;
   border-radius: variables.$border-radius;
   background-color: variables.$bg-color;
+  transition: all variables.$fast-animation-duration ease-out;
+  transform: scale(0.98);
+
+    
+  &:hover {
+    transform: scale(1);
+    box-shadow: 0 2px 16px 0 #0000001a;
+  }
 
   &__image {
     scale: 1;
     object-fit: contain;
     margin-bottom: variables.$small-gap;
     aspect-ratio: 1 / 1;
-    transition: transform .3s ease-out;
+    transition: transform variables.$fast-animation-duration ease-out;
   }
   
   &__image:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
   }
 
   &__title {
-    margin-bottom: 8px;
+    margin-bottom: variables.$smaller-gap;
   }
 
   &__price {
     position: relative;
     display: flex;
     gap: 8px;
-    margin-bottom: 16px;
+    margin-bottom: variables.$small-gap;
 
     &::after {
       content: '';
       position: absolute;
-      bottom: -8px;
+      bottom: - variables.$smaller-gap;
       width: 100%;
       height: 1px;
 
-      background-color: variables.$secondary-color;
+      background-color: variables.$elements-color;
     }
   }
 
@@ -68,8 +73,8 @@
   &__characteristics {
     display: flex;
     flex-direction: column;
-    gap: 8px;
-    margin-block: 0 16px;
+    gap: variables.$smaller-gap;
+    margin-bottom: variables.$small-gap;
   }
 
   &__characteristic {
@@ -88,11 +93,6 @@
     align-items: center;
     justify-content: space-between;
   }
-
-  
-  &:hover {
-    box-shadow: 0 2px 16px 0 #0000001a;
-  }
   
 }
 
@@ -103,10 +103,10 @@
 .button-favourite {
   width: variables.$button-height;
   height: variables.$button-height;
-  background: variables.$bg-color url('../../../public/icons/Favourites (Heart Like).svg') center / 16px no-repeat;
+  background: variables.$bg-color url('/icons/Favourites (Heart Like).svg') center / 16px no-repeat;
   transition: background-color 0.3s, border-color 0.3s;
 
   &--selected {
-    background-image: url('../../../public/icons/Favourites\ Filled\ \(Heart\ Like\).svg');
+    background-image: url('/icons/Favourites\ Filled\ \(Heart\ Like\).svg');
   }
 }
