--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 @use './variables' as variables;
 @use './fonts' as fonts;
+@use './mixins/mixins.scss' as mixins;
 
 * {
     margin: 0;
@@ -13,7 +14,6 @@ body {
 }
 
 body {
-  //line-height: 1.5; for what this?
   font-family: fonts.$main-font, sans-serif;
   line-height: variables.$line-height-text;
 }
@@ -45,30 +45,29 @@ button {
     position: relative;
 }
 
+.container {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
 .wrapper {
+    position: relative;
     width: 100%;
     flex: 1;
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
     margin: 0 auto;
-}
+    background-color: variables.$hover-color;
 
-.container {
-    margin: 0 variables.$middle-small-gap;
-    max-width: 1136px;
-    display: flex;
-    flex-direction: column;
-
-    @media (max-width: 1199px) {
-      max-width: 90%;
-    }
-
-    @media (max-width: 639px) {
-      margin: 0 auto;
-      flex-direction: column;
+    &__container {
+      @include mixins.container {
+        flex-direction: column;
+      }
     }
 }
+
 
 .button {
     display: flex;
@@ -108,9 +107,6 @@ button {
     &--round {
         width: variables.$button-height-small;
         height: variables.$button-height-small;
-        // display: flex;
-        // align-items: center;
-        // justify-content: center;
         border-radius: 100%;
         border-radius: variables.$button-height-small;
 
@@ -140,7 +136,13 @@ button {
     font-size: variables.$font-size-text-small;
     color: variables.$secondary-color;
 
+    &__list {
+      display: flex;
+    }
+
     &__item {
+      display: flex;
+      align-items: center;
       transition: color 300ms ease;
     }
 
@@ -151,14 +153,24 @@ button {
 
 .headline--1 {
   font-family: fonts.$bold-font, sans-serif;
-  font-size: variables.$font-size-h1;
-  line-height: variables.$line-height-h1;
+  font-size: variables.$font-size-h2;
+  line-height: variables.$line-height-h2;
+
+  @include mixins.on-tablet {
+    font-size: variables.$font-size-h1;
+    line-height: variables.$line-height-h1;
+  }
 }
 
 .headline--2 {
   font-family: fonts.$bold-font, sans-serif;
-  font-size: variables.$font-size-h2;
-  line-height: variables.$line-height-h2;
+  font-size: variables.$font-size-h3;
+  line-height: variables.$line-height-h3;
+
+  @include mixins.on-tablet {
+    font-size: variables.$font-size-h2;
+    line-height: variables.$line-height-h2;
+  }
 }
 
 .headline--3 {
