--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -1,53 +1,60 @@
 @use '../../styles/variables.scss' as variables;
+@use '../../styles/fonts.scss' as fonts;
 
 .product-card {
   display: flex;
   flex-direction: column;
-
-  max-width: 272px;
-  max-height: 506px;
-  padding: 32px;
-
-  box-sizing: border-box;
+  width: variables.$card-width;
+  padding: variables.$gap;
   border: 1px solid variables.$elements-color;
+  border-radius: variables.$border-radius;
+  background-color: variables.$bg-color;
+  transition: all variables.$fast-animation-duration ease-out;
+  transform: scale(0.98);
+
+    
+  &:hover {
+    transform: scale(1);
+    box-shadow: 0 2px 16px 0 #0000001a;
+  }
 
   &__image {
-
     scale: 1;
     object-fit: contain;
     margin-bottom: variables.$small-gap;
     aspect-ratio: 1 / 1;
-    transition: transform .3s ease-out;
+    transition: transform variables.$fast-animation-duration ease-out;
   }
+  
   &__image:hover {
-
-    transform: scale(1.1);
+    transform: scale(1.05);
   }
 
   &__title {
-    margin-bottom: 8px;
+    margin-bottom: variables.$smaller-gap;
   }
 
   &__price {
     position: relative;
     display: flex;
     gap: 8px;
-    margin-bottom: 16px;
+    margin-bottom: variables.$small-gap;
 
     &::after {
       content: '';
       position: absolute;
-      bottom: -8px;
+      bottom: - variables.$smaller-gap;
       width: 100%;
       height: 1px;
 
-      background-color: variables.$secondary-color;
+      background-color: variables.$elements-color;
     }
   }
 
   &__full-price {
     position: relative;
     color: variables.$secondary-color;
+    font-family: fonts.$main-font;
 
     &::before {
       content: '';
@@ -66,8 +73,8 @@
   &__characteristics {
     display: flex;
     flex-direction: column;
-    gap: 8px;
-    margin-block: 0 16px;
+    gap: variables.$smaller-gap;
+    margin-bottom: variables.$small-gap;
   }
 
   &__characteristic {
@@ -81,53 +88,25 @@
 
   &__buttons {
     display: flex;
-    gap: variables.$smallest-gap;
+    flex-wrap: wrap;
+    gap: variables.$smaller-gap;
     align-items: center;
     justify-content: space-between;
-  }
-
-  
-  &:hover {
-    box-shadow: 0 2px 16px 0 #0000001a;
   }
   
 }
 
 .button-add {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    height: 40px;
-    width: 100%;
-
-    border: 1px solid #B4BDC3;
-    border-radius: 8px;
-    background-color: variables.$accent-color;
-    font-size: 14px;
-    color: variables.$bg-color;
-    line-height: variables.$line-height-text;
-
-  
-  &--selected {
-    background-color: variables.$bg-color;
-    color: variables.$accent-color;
-  }
+  flex: 1;
 }
 
 .button-favourite {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-shrink: 0;
-  width: 40px;
-  height: 40px;
-  border: 1px solid #B4BDC3;
-  border-radius: 50%;
-  background: variables.$bg-color url('../../../public/icons/Favourites (Heart Like).svg') center / 16px no-repeat;
+  width: variables.$button-height;
+  height: variables.$button-height;
+  background: variables.$bg-color url('/icons/Favourites (Heart Like).svg') center / 16px no-repeat;
   transition: background-color 0.3s, border-color 0.3s;
 
   &--selected {
-    background-image: url('../../../public/icons/Favourites\ Filled\ \(Heart\ Like\).svg');
+    background-image: url('/icons/Favourites\ Filled\ \(Heart\ Like\).svg');
   }
 }
