--- a/src/components/pages/NotFoundPage/NotFoundPage.css
+++ b/src/components/pages/NotFoundPage/NotFoundPage.css
@@ -6,7 +6,7 @@
   align-items: center;
   padding-top: 6.25rem;
 }
-.not-found__headline-4 {
+.not-found__headline {
   margin-top: 2rem;
   color: #89939A;
 }
