--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -55,6 +55,7 @@ $gap: 2rem;
 $big-gap: 2.5rem;
 $bigger-gap: 3.5rem;
 $middle-big-gap: 4rem;
+$middle-bigger-gap: 5rem;
 $large-gap: 6.25rem;
 
 // ELEMENTS SIZES
