--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -1,42 +1,70 @@
+@font-face {
+  font-family: "Mont";
+  src: url("/fonts/Mont-Regular.otf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Mont-Semi-Bold";
+  src: url("/fonts/Mont-SemiBold.otf") format("opentype");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Mont-Bold";
+  src: url("/fonts/Mont-Bold.otf") format("opentype");
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
 .product-card {
   display: flex;
   flex-direction: column;
-  max-width: 272px;
-  max-height: 506px;
-  padding: 32px;
-  box-sizing: border-box;
+  width: 272px;
+  padding: 2rem;
   border: 1px solid #E2E6E9;
+  border-radius: 0.5rem;
+  background-color: #FFFFFF;
+  transition: all 200ms ease-out;
+  transform: scale(0.98);
+}
+.product-card:hover {
+  transform: scale(1);
+  box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.1019607843);
 }
 .product-card__image {
   scale: 1;
   object-fit: contain;
   margin-bottom: 1rem;
   aspect-ratio: 1/1;
-  transition: transform 0.3s ease-out;
+  transition: transform 200ms ease-out;
 }
 .product-card__image:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 .product-card__title {
-  margin-bottom: 8px;
+  margin-bottom: 0.5rem;
 }
 .product-card__price {
   position: relative;
   display: flex;
   gap: 8px;
-  margin-bottom: 16px;
+  margin-bottom: 1rem;
 }
 .product-card__price::after {
   content: "";
   position: absolute;
-  bottom: -8px;
+  bottom: -0.5rem;
   width: 100%;
   height: 1px;
-  background-color: #89939A;
+  background-color: #E2E6E9;
 }
 .product-card__full-price {
   position: relative;
   color: #89939A;
+  font-family: "Mont";
 }
 .product-card__full-price::before {
   content: "";
@@ -52,8 +80,8 @@
 .product-card__characteristics {
   display: flex;
   flex-direction: column;
-  gap: 8px;
-  margin-block: 0 16px;
+  gap: 0.5rem;
+  margin-bottom: 1rem;
 }
 .product-card__characteristic {
   display: flex;
@@ -64,46 +92,24 @@
 }
 .product-card__buttons {
   display: flex;
+  flex-wrap: wrap;
   gap: 0.5rem;
   align-items: center;
   justify-content: space-between;
 }
-.product-card:hover {
-  box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.1019607843);
-}
 
 .button-add {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 40px;
-  width: 100%;
-  border: 1px solid #B4BDC3;
-  border-radius: 8px;
-  background-color: #216CFF;
-  font-size: 14px;
-  color: #FFFFFF;
-  line-height: 1.3125rem;
-}
-.button-add--selected {
-  background-color: #FFFFFF;
-  color: #216CFF;
+  flex: 1;
 }
 
 .button-favourite {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-shrink: 0;
-  width: 40px;
-  height: 40px;
-  border: 1px solid #B4BDC3;
-  border-radius: 50%;
-  background: #FFFFFF url("../../../public/icons/Favourites (Heart Like).svg") center/16px no-repeat;
+  width: 2.5rem;
+  height: 2.5rem;
+  background: #FFFFFF url("/icons/Favourites (Heart Like).svg") center/16px no-repeat;
   transition: background-color 0.3s, border-color 0.3s;
 }
 .button-favourite--selected {
-  background-image: url("../../../public/icons/Favourites Filled (Heart Like).svg");
+  background-image: url("/icons/Favourites Filled (Heart Like).svg");
 }
 
 /*# sourceMappingURL=ProductCard.css.map */
