--- a/src/components/pages/CartPage/CartItem/CartItem.css
+++ b/src/components/pages/CartPage/CartItem/CartItem.css
@@ -6,45 +6,40 @@
   font-display: swap;
 }
 @font-face {
-  font-family: "Mont-bold";
-  src: url("/fonts/Mont-Bold.otf") format("opentype");
-  font-weight: 800;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Mont-semi-bold";
+  font-family: "Mont-Semi-Bold";
   src: url("/fonts/Mont-SemiBold.otf") format("opentype");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
+@font-face {
+  font-family: "Mont-Bold";
+  src: url("/fonts/Mont-Bold.otf") format("opentype");
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
 .cart-item {
+  display: flex;
   width: 100%;
-  height: 160px;
+  flex-direction: column;
   background-color: #FFFFFF;
   border: 1px solid #E2E6E9;
-  border-radius: 16px;
+  border-radius: 0.5rem;
   padding: 1rem;
-  display: flex;
-  flex-direction: column;
   justify-content: space-between;
 }
 @media (min-width: 640px) {
   .cart-item {
     flex-direction: row;
-    max-width: 752px;
-    height: 128px;
     padding: 1.5rem;
   }
 }
 .cart-item__container {
-  display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
-  margin: 0;
 }
 @media (min-width: 640px) {
   .cart-item__container {
@@ -54,7 +49,7 @@
 .cart-item__phone-image {
   min-width: 5rem;
   height: 5rem;
-  padding: 7px;
+  padding: 0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -80,17 +75,11 @@
   justify-content: space-between;
   align-items: center;
 }
-.cart-item__button {
-  border: 1px solid #E2E6E9;
-}
-.cart-item__button:hover {
-  background-color: #f5f5f5;
-}
 .cart-item__count-text {
   font-size: 0.75rem;
 }
 .cart-item__price {
-  font-family: "Mont-bold";
+  font-family: "Mont-Bold";
   font-size: 1.375rem;
   margin-left: 1rem;
 }
@@ -105,4 +94,4 @@
   opacity: 0.7;
 }
 
-/*# sourceMappingURL=CardItem.css.map */
+/*# sourceMappingURL=CartItem.css.map */
