--- a/src/components/pages/HomePage/HomePage.css
+++ b/src/components/pages/HomePage/HomePage.css
@@ -6,168 +6,86 @@
   font-display: swap;
 }
 @font-face {
-  font-family: "Mont-bold";
-  src: url("/fonts/Mont-Bold.otf") format("opentype");
-  font-weight: 800;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Mont-semi-bold";
+  font-family: "Mont-Semi-Bold";
   src: url("/fonts/Mont-SemiBold.otf") format("opentype");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
-header {
-  width: 100%;
-  height: 48px;
-  position: sticky;
-  top: 0;
-  background-color: #89939A;
+@font-face {
+  font-family: "Mont-Bold";
+  src: url("/fonts/Mont-Bold.otf") format("opentype");
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
 }
-
 .home-page {
   margin-bottom: 4rem;
 }
+@media (min-width: 1200px) {
+  .home-page {
+    margin-bottom: 5rem;
+  }
+}
 
-.title__container {
-  margin-bottom: 24px;
+.section:not(:last-child) {
+  margin-bottom: 3.5rem;
 }
 @media (min-width: 640px) {
-  .title__container {
-    margin-bottom: 32px;
+  .section:not(:last-child) {
+    margin-bottom: 4rem;
   }
 }
 @media (min-width: 1200px) {
-  .title__container {
-    margin-bottom: 56px;
-  }
-}
-.title__text {
-  font-family: "Mont-bold";
-  letter-spacing: -0.01em;
-  font-size: 2rem;
-  color: #0F0F11;
-  line-height: 41px;
-  margin: 24px 0;
-}
-@media (min-width: 640px) {
-  .title__text {
-    font-size: 3rem;
-    line-height: 56px;
+  .section:not(:last-child) {
+    margin-bottom: 5rem;
   }
 }
 
-.slider {
-  margin-bottom: 56px;
-}
-.slider__container {
-  max-width: 100%;
-  height: 352px;
-  margin: 0;
-  background-color: #89939A;
+.hero-section__title {
+  margin: 1.5rem 0;
 }
 @media (min-width: 640px) {
-  .slider__container {
-    margin: 0 1.5rem 64px;
+  .hero-section__title {
+    margin: 2rem 0;
   }
 }
 @media (min-width: 1200px) {
-  .slider__container {
-    margin-bottom: 80px;
+  .hero-section__title {
+    margin: 3.5rem 0;
   }
 }
 
-.new-models {
-  margin-bottom: 56px;
-}
-.new-models__container {
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-@media (min-width: 640px) {
-  .new-models__container {
-    max-width: 100%;
-    margin-bottom: 64px;
-  }
-}
-@media (min-width: 1200px) {
-  .new-models__container {
-    margin-bottom: 80px;
-  }
-}
-.new-models__title {
-  font-family: "Mont-bold";
-  color: #0F0F11;
-  font-size: 1.375rem;
-  line-height: 2.0625rem;
-}
-@media (min-width: 640px) {
-  .new-models__title {
-    font-size: 2rem;
-    line-height: 3rem;
-  }
-}
-.new-models__buttons {
-  margin-left: 0.5rem;
-  width: 5rem;
-  height: 2rem;
-  display: flex;
-  justify-content: space-between;
-}
-.new-models__button {
-  box-sizing: border-box;
-  border: 1px solid #E2E6E9;
-}
-.new-models__button:hover {
-  background-color: #f5f5f5;
-}
-
-.categories {
-  margin-bottom: 56px;
-}
-.categories__container {
+.categories-section__container {
   gap: 2rem;
   --columns: 4;
   display: grid;
-  column-gap: 16px;
+  column-gap: 1rem;
   grid-template-columns: repeat(var(--columns), 1fr);
 }
 @media (min-width: 640px) {
-  .categories__container {
+  .categories-section__container {
     --columns: 12;
   }
 }
 @media (min-width: 1200px) {
-  .categories__container {
+  .categories-section__container {
     --columns: 24;
   }
 }
 @media (min-width: 640px) {
-  .categories__container {
+  .categories-section__container {
     max-width: 100%;
-    margin-bottom: 64px;
+    margin-bottom: 4rem;
   }
 }
 @media (min-width: 1200px) {
-  .categories__container {
-    margin-bottom: 80px;
+  .categories-section__container {
+    margin-bottom: 6.25rem;
   }
 }
-.categories__title {
-  font-family: "Mont-bold";
-  color: #0F0F11;
-  font-size: 1.375rem;
-  line-height: 2.0625rem;
+.categories-section__title {
   margin-bottom: 1.5rem;
-}
-@media (min-width: 640px) {
-  .categories__title {
-    font-size: 2rem;
-    line-height: 3rem;
-  }
 }
 
 .category {
@@ -186,7 +104,6 @@ header {
 }
 .category__text {
   margin-top: 0.25rem;
-  font-weight: 600;
   font-size: 0.875rem;
   color: #89939A;
 }
