--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -21,6 +21,7 @@ $icons-color: #B4BDC3;
 $elements-color: #E2E6E9;
 $hover-color: #FAFBFC;
 $bg-color: #FFFFFF;
+$disable-button-color: #F2F2F2;
 
 // FONTS
 
