--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -74,11 +74,11 @@ button {
     align-items: center;
     justify-content: center;
     font-size: variables.$font-size-text;
-    transition: border-color 300ms ease;
+    transition: all 300ms ease;
 
     &__icon {
       color: variables.$secondary-color;
-      transition: border-color 300ms ease;
+      transition: all 300ms ease;
     }
 
     &--primary {
@@ -126,8 +126,6 @@ button {
     &--disabled {
       border-color: variables.$elements-color;
     }
-
-
 }
 
 .nav {
