--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,7 @@
 // SCREEN SIZE
 
 $min-tablet-width: 640px;
+$max-tablet-width: 900px;
 $min-desktop-width: 1200px;
 $max-container-width: 1136px;
 
@@ -25,11 +26,8 @@ $icons-color: #B4BDC3;
 $elements-color: #E2E6E9;
 $hover-color: #FAFBFC;
 $bg-color: #FFFFFF;
-<<<<<<< HEAD
-$disable-button-color: #F2F2F2;
-=======
 $shadow-color: #216bff2f;
->>>>>>> c2775a5aa953b05b6f76724809e668496b11913d
+$disable-button-color: #F2F2F2;
 
 // FONTS
 
