Cart page implementation

--- a/src/components/pages/CartPage/CartItem/CartItem.scss
+++ b/src/components/pages/CartPage/CartItem/CartItem.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
   background-color: variables.$bg-color;
   border: 1px solid variables.$elements-color;
-  border-radius: variables.$border-radius;
+  border-radius: variables.$cart-item-border-radius;
   padding: variables.$small-gap;
   justify-content: space-between;
 
