--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -66,6 +66,7 @@ $card-image-size: 5rem;
 $bullet-point-size: 1rem;
 $bullet-point-height: 0.25rem;
 $border-radius: 0.5rem;
+$cart-item-border-radius: 1rem;
 $shadow-blur: 1rem;
 $border-height: 2px;
 $header-size: 64px;
