--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -1,5 +1,6 @@
 @use '../../styles/variables.scss' as variables;
 @use '../../styles/fonts.scss' as fonts;
+@use '../../styles/mixins/mixins.scss' as mixins;
 
 .product-card {
   display: flex;
@@ -11,11 +12,18 @@
   background-color: variables.$bg-color;
   transition: all variables.$fast-animation-duration ease-out;
   transform: scale(0.98);
+  position: relative;
+
+  // &__link {
+  //   position: absolute;
+  //   width: 100%;
+  //   height: 100%;
+  // }
 
     
   &:hover {
     transform: scale(1);
-    box-shadow: 0 2px 16px 0 #0000001a;
+    @include mixins.shadow
   }
 
   &__image {
@@ -34,47 +42,22 @@
     margin-bottom: variables.$smaller-gap;
   }
 
-  &__price {
-    position: relative;
-    display: flex;
-    gap: 8px;
-    margin-bottom: variables.$small-gap;
-
-    &::after {
-      content: '';
-      position: absolute;
-      bottom: - variables.$smaller-gap;
-      width: 100%;
-      height: 1px;
-
-      background-color: variables.$elements-color;
-    }
-  }
-
-  &__full-price {
-    position: relative;
-    color: variables.$secondary-color;
-    font-family: fonts.$main-font;
-
-    &::before {
-      content: '';
-      position: absolute;
-      top: 50%;
-      left: 0;
-      right: 0;
-      transform: translateY(-50%);
-
-      height: 1.8px;
-      background-color: variables.$secondary-color;
-      mix-blend-mode: color-dodge;
-    }
-  }
-
   &__characteristics {
     display: flex;
     flex-direction: column;
     gap: variables.$smaller-gap;
     margin-bottom: variables.$small-gap;
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: - variables.$smaller-gap;
+      width: 100%;
+      height: 1px;
+
+      background-color: variables.$elements-color;
+    }
   }
 
   &__characteristic {
@@ -86,27 +69,7 @@
     color: variables.$secondary-color;
   }
 
-  &__buttons {
-    display: flex;
-    flex-wrap: wrap;
-    gap: variables.$smaller-gap;
-    align-items: center;
-    justify-content: space-between;
-  }
+ 
   
 }
 
-.button-add {
-  flex: 1;
-}
-
-.button-favourite {
-  width: variables.$button-height;
-  height: variables.$button-height;
-  background: variables.$bg-color url('/icons/Favourites (Heart Like).svg') center / 16px no-repeat;
-  transition: background-color 0.3s, border-color 0.3s;
-
-  &--selected {
-    background-image: url('/icons/Favourites\ Filled\ \(Heart\ Like\).svg');
-  }
-}
