--- a/src/styles/mixins/mixins.scss
+++ b/src/styles/mixins/mixins.scss
@@ -42,3 +42,19 @@
     --columns: 12;
   }
 }
+
+// TO DO: REMOVE THAT TEST MIXINS!!!!!!!!
+
+@mixin border {
+  border: 1px solid variables.$elements-color;
+}
+
+@mixin shadow {
+  box-shadow: 0 2px 16px 0 #0000001a;
+}
+
+// TO DO: Create more animations (?)
+
+@mixin smooth-transition($property) {
+  transition: $property variables.$fast-animation-duration ease;
+}
