--- a/src/components/pages/CatalogPage/CatalogPage.scss
+++ b/src/components/pages/CatalogPage/CatalogPage.scss
@@ -1,8 +1,8 @@
-@use '../../../../styles/variables.scss' as variables;
-@use '../../../../styles/mixins/mixins.scss' as mixins;
+@use './../../../styles/variables.scss' as variables;
+@use './../../../styles/mixins/mixins.scss' as mixins;
 
 
-.tablets-page {
+.product-page {
   @include mixins.container;
 
   display: grid;
