Solved merge conflict of catalog page + added Product page (#22)
* Homepage & header fix (added animations, fixed hover effect on header buttons)

* catalog page build (without logic)

* Product page logic development WIP

* changed structure catalog page and implemented pagiantion logic

* changed structure catalog page and implemented pagiantion logic

* Recommendation logic for product page

---------

Co-authored-by: RuslanMudruj <13072003.rm@gmail.com>

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,7 @@
 // SCREEN SIZE
 
 $min-tablet-width: 640px;
+$max-tablet-width: 900px;
 $min-desktop-width: 1200px;
 $max-container-width: 1136px;
 
