--- a/src/components/Back/Back.scss
+++ b/src/components/Back/Back.scss
@@ -3,6 +3,7 @@
 .back {
   display: flex;
   align-items: center;
+  padding-bottom: variables.$small-gap;
 
   &__button {
     display: flex;
@@ -16,10 +17,10 @@
     }
   }
 }
+
 .vector {
-  display: flex;
-  height: 16px;
-  width: 16px;
+  height: 10px;
+  width: 10px;
 }
 
 
