--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -58,15 +58,23 @@
     justify-content: flex-end;
   }
 
-  &__button {
-    position: relative;
-    height: 100%;
-    width: variables.$header-size;
-    border-left: 1px solid variables.$elements-color;
+    &__button {
+        position: relative;
+        height: 100%;
+        width: variables.$header-size;
+        border-left: 1px solid variables.$elements-color;
+        border-radius: 0;
 
     &:hover {
       background-color: variables.$primary-color;
       color: variables.$bg-color;
+
+      .icon__cart {
+        background-image: url('/icons/shopping-bag-hover.svg');
+      }
+      .icon__heart {
+        background-image: url('/icons/heart-hover.svg');
+      }
     }
 
     &--desktop {
@@ -102,6 +110,10 @@
 
     .icon {
       position: relative;
+      width: 14px;
+      height: variables.$border-height;
+      border-radius: variables.$border-radius;
+      background-color: variables.$primary-color;
 
       &::before {
         content: '';
@@ -135,13 +147,18 @@
           transform: rotate(45deg);
         }
 
-        &::after {
-          top: 0;
-          transform: rotate(-45deg);
+                &::after {
+                    top: 0;
+                    transform: rotate(-45deg);
+                }
+            }
         }
-      }
+
+        &:hover {
+            background-color: variables.$bg-color;
+        }
+
     }
-  }
 }
 
 .header__counter {
@@ -167,7 +184,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-image: url(/public/icons/Shopping-bag.svg);
+  background-image: url('/icons/shopping-bag-regular.svg');
 }
 
 .icon__heart {
@@ -177,5 +194,5 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-image: url(/public/icons/heart-regular.svg);
+  background-image: url('/icons/heart-regular.svg');
 }
