--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -62,6 +62,7 @@ button {
     background-color: variables.$hover-color;
 
     &__container {
+      padding-top: variables.$big-gap;
       @include mixins.container {
         flex-direction: column;
       }
@@ -74,25 +75,25 @@ button {
     align-items: center;
     justify-content: center;
     font-size: variables.$font-size-text;
-    transition: border-color 300ms ease;
+    border-radius: variables.$border-radius;
+    @include mixins.smooth-transition(all);
 
     &__icon {
       color: variables.$secondary-color;
-      transition: border-color 300ms ease;
+      @include mixins.smooth-transition(all);
     }
 
     &--primary {
         height: variables.$button-height;
         color: variables.$bg-color;
         line-height: variables.$line-height-text;
-        border-radius: variables.$border-radius;
         background-color: variables.$accent-color;
         padding: 0 variables.$smaller-gap;
 
         &--selected {
           background-color: variables.$bg-color;
           color: variables.$accent-color;
-          border: 1px solid #B4BDC3;
+          @include mixins.border
         }
 
         &:hover {
@@ -101,7 +102,11 @@ button {
     }
 
     &--secondary {
-        border: 1px variables.$icons-color solid ;
+        border: 1px variables.$icons-color solid;
+
+        &:hover {
+          border-color: variables.$primary-color;
+        }
     }
 
     &--round {
@@ -110,9 +115,9 @@ button {
         border-radius: 100%;
         border-radius: variables.$button-height-small;
 
-        &:hover {
-          border-color: variables.$primary-color;
-        }
+        // &:hover {
+        //   border-color: variables.$primary-color;
+        // }
 
         &:hover .button__icon   {
           color: variables.$primary-color;
@@ -126,8 +131,6 @@ button {
     &--disabled {
       border-color: variables.$elements-color;
     }
-
-
 }
 
 .nav {
@@ -149,6 +152,41 @@ button {
     &__item:hover {
       color: variables.$primary-color;
     }
+}
+
+.section:not(:last-child) {
+  margin-bottom: variables.$bigger-gap;
+
+  @include mixins.on-tablet {
+    margin-bottom: variables.$middle-big-gap;
+  }
+
+  @include mixins.on-desktop {
+    margin-bottom: variables.$middle-bigger-gap;
+  }
+}
+
+.headline-block {
+  margin-bottom: variables.$big-gap;
+
+  &__subtitle {
+    color: variables.$secondary-color;
+  }
+}
+
+.sub-headline-block {
+  margin-bottom: variables.$big-gap;
+  position: relative;
+
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background-color: variables.$elements-color;
+    bottom: - variables.$smaller-gap;
+  }
 }
 
 .headline--1 {
@@ -187,6 +225,12 @@ button {
 
 .small-text {
   font-size: variables.$font-size-text-small;
+}
+
+.title {
+  color: variables.$secondary-color;
+  font-size: variables.$font-size-text-small;
+  margin-bottom: variables.$smaller-gap;
 }
 
 .swiper {
