--- a/src/styles/mixins/mixins.scss
+++ b/src/styles/mixins/mixins.scss
@@ -6,6 +6,12 @@
   }
 }
 
+@mixin on-large-tablet {
+  @media (min-width: variables.$max-tablet-width) {
+    @content;
+  }
+}
+
 @mixin on-desktop {
   @media (min-width: variables.$min-desktop-width) {
     @content;
@@ -42,4 +48,27 @@
   &:hover {
     #{$property}: $toValue;
   }
+}
+
+// @mixin hover($property, $toValue) {
+//   transition: #{$property} variables.$effectDuration;
+//   &:hover {
+//     #{$property}: $toValue;
+//   }
+// }
+
+// TO DO: REMOVE THAT TEST MIXINS!!!!!!!!
+
+@mixin border {
+  border: 1px solid variables.$elements-color;
+}
+
+@mixin shadow {
+  box-shadow: 0 2px 16px 0 #0000001a;
+}
+
+// TO DO: Create more animations (?)
+
+@mixin smooth-transition($property) {
+  transition: $property variables.$fast-animation-duration ease;
 }
